log/build_2025-10-29_11-24-12/auto_buff/stdout_stderr.log
-- Found ament_cmake: 2.3.2 (/opt/ros/rolling/share/ament_cmake/cmake)
-- Found utils: 1.0.0 (/home/guo/ITL_sentry_auto_new/install/utils/share/utils/cmake)
-- Found rosidl_generator_c: 4.5.1 (/opt/ros/rolling/share/rosidl_generator_c/cmake)
-- Found rosidl_generator_cpp: 4.5.1 (/opt/ros/rolling/share/rosidl_generator_cpp/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rmw_implementation_cmake: 7.3.0 (/opt/ros/rolling/share/rmw_implementation_cmake/cmake)
-- Found rmw_fastrtps_cpp: 8.2.0 (/opt/ros/rolling/share/rmw_fastrtps_cpp/cmake)
-- Using RMW implementation 'rmw_fastrtps_cpp' as default
-- Found serial: 0.1.0 (/home/guo/ITL_sentry_auto_new/install/serial/share/serial/cmake)
-- Found deveice: 1.0.0 (/home/guo/ITL_sentry_auto_new/install/deveice/share/deveice/cmake)
-- Found auto_aim: 0.1.0 (/home/guo/ITL_sentry_auto_new/install/auto_aim/share/auto_aim/cmake)
-- Configuring done (1.2s)
-- Generating done (0.0s)
-- Build files have been written to: /home/guo/ITL_sentry_auto_new/build/auto_buff
[  7%] Building CXX object CMakeFiles/auto_buff_data_type.dir/buff_data_type/src/buff_type.cpp.o
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_data_type/src/buff_type.cpp: In constructor ‘auto_buff::PowerRune::PowerRune(std::vector<auto_buff::FanBlade>&, cv::Point2f, std::optional<auto_buff::PowerRune>)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_data_type/src/buff_type.cpp:29:52: warning: comparison of integer expressions of different signedness: ‘std::vector<auto_buff::FanBlade>::size_type’ {aka ‘long unsigned int’} and ‘int’ [-Wsign-compare]
   29 |   else if (last_powerrune.has_value() && ts.size() == last_powerrune.value().light_num) {
      |                                          ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_data_type/src/buff_type.cpp:88:37: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<auto_buff::FanBlade>::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
   88 |   for (int i = 0, j = 0; i < 5 && j < ts.size(); i++) {
      |                                   ~~^~~~~~~~~~~
[ 15%] Linking CXX static library libauto_buff_data_type.a
[ 15%] Built target auto_buff_data_type
[ 23%] Building CXX object CMakeFiles/auto_buff_solver.dir/buff_solver/src/buff_solver.cpp.o
[ 30%] Building CXX object CMakeFiles/auto_buff_detect.dir/buff_detect/src/buff_detector.cpp.o
[ 38%] Building CXX object CMakeFiles/auto_buff_detect.dir/buff_detect/src/yolo11_buff.cpp.o
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/src/yolo11_buff.cpp: In member function ‘std::vector<auto_buff::YOLO11_BUFF::Object> auto_buff::YOLO11_BUFF::get_multicandidateboxes(cv::Mat&)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/src/yolo11_buff.cpp:131:22: warning: unused variable ‘shape’ [-Wunused-variable]
  131 |     const cv::Size & shape = image.size();
      |                      ^~~~~
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/src/yolo11_buff.cpp: In member function ‘std::vector<auto_buff::YOLO11_BUFF::Object> auto_buff::YOLO11_BUFF::get_onecandidatebox(cv::Mat&)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/src/yolo11_buff.cpp:216:22: warning: unused variable ‘shape’ [-Wunused-variable]
  216 |     const cv::Size & shape = image.size();
      |                      ^~~~~
In file included from /home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/src/buff_detector.cpp:1:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/include/buff_detector.hpp: In constructor ‘auto_buff::Buff_Detector::Buff_Detector(const string&)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/include/buff_detector.hpp:35:7: warning: ‘auto_buff::Buff_Detector::lose_’ will be initialized after [-Wreorder]
   35 |   int lose_;  // 丢失的次数
      |       ^~~~~
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/include/buff_detector.hpp:33:15: warning:   ‘auto_buff::YOLO11_BUFF auto_buff::Buff_Detector::MODE_’ [-Wreorder]
   33 |   YOLO11_BUFF MODE_;
      |               ^~~~~
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_detect/src/buff_detector.cpp:7:1: warning:   when initialized here [-Wreorder]
    7 | Buff_Detector::Buff_Detector(const std::string & config) : status_(LOSE), lose_(0), MODE_(config) {}
      | ^~~~~~~~~~~~~
[ 46%] Linking CXX static library libauto_buff_detect.a
[ 46%] Built target auto_buff_detect
[ 53%] Building CXX object CMakeFiles/auto_buff_tagret.dir/buff_tagret/src/buff_target.cpp.o
[ 61%] Linking CXX static library libauto_buff_solver.a
[ 61%] Built target auto_buff_solver
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_tagret/src/buff_target.cpp: In member function ‘virtual void auto_buff::BigTarget::predict(double)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_tagret/src/buff_target.cpp:408:10: warning: unused variable ‘spd’ [-Wunused-variable]
  408 |   double spd = fit_spd_;
      |          ^~~
[ 69%] Linking CXX static library libauto_buff_tagret.a
[ 69%] Built target auto_buff_tagret
[ 76%] Building CXX object CMakeFiles/auto_buff_aimer.dir/buff_aimer/src/buff_aimer.cpp.o
In file included from /home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/include/buff_aimer.hpp:12,
                 from /home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/src/buff_aimer.cpp:1:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_tagret/include/buff_target.hpp:62:10: error: ‘ExtendedKalmanFilter’ in namespace ‘utils’ does not name a type
   62 |   utils::ExtendedKalmanFilter ekf_;
      |          ^~~~~~~~~~~~~~~~~~~~
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/src/buff_aimer.cpp: In member function ‘io::Command auto_buff::Aimer::aim(auto_buff::Target&, std::chrono::_V2::steady_clock::time_point&, double, bool)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/src/buff_aimer.cpp:36:8: warning: unused variable ‘angle_changed’ [-Wunused-variable]
   36 |   bool angle_changed =
      |        ^~~~~~~~~~~~~
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/src/buff_aimer.cpp: In member function ‘plan::Plan auto_buff::Aimer::mpc_aim(auto_buff::Target&, std::chrono::_V2::steady_clock::time_point&, io::GimbalState, bool)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/src/buff_aimer.cpp:89:8: warning: unused variable ‘angle_changed’ [-Wunused-variable]
   89 |   bool angle_changed =
      |        ^~~~~~~~~~~~~
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/src/buff_aimer.cpp: In member function ‘bool auto_buff::Aimer::get_send_angle(auto_buff::Target&, double, double, bool, double&, double&)’:
/home/guo/ITL_sentry_auto_new/src/core/auto_buff/buff_aimer/src/buff_aimer.cpp:152:14: warning: unused parameter ‘to_now’ [-Wunused-parameter]
  152 |   const bool to_now, double & yaw, double & pitch)
      |   ~~~~~~~~~~~^~~~~~
gmake[2]: *** [CMakeFiles/auto_buff_aimer.dir/build.make:76：CMakeFiles/auto_buff_aimer.dir/buff_aimer/src/buff_aimer.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:254：CMakeFiles/auto_buff_aimer.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
